--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   },
   "dependencies": {
     "firebase": "5.0.3",
+    "lodash": "^4.17.11",
+    "native-base": "^2.8.1",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.3",
+    "react-native-vector-icons": "^6.0.2",
+    "react-navigation": "^2.18.1",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
