--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "native-base": "^2.8.1",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.3",
+    "react-native-communications": "^2.2.1",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.1",
     "react-redux": "^5.0.7",
